<resources>
    <string name="app_name">CodeChatAndy</string>
    <string name="Email">E-mail</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="Sign_out">sign out</string>
    <string name="userName">User name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="simple_text">did great work</string>
    <string name="title_activity_register">Register Activity</string>
    <string name="invalid_email">Your email is invalid</string>
    <string name="invalid_password">Your password is not Valid</string>
    <string name="field_required">Please fill the fields</string>
    <string name="EditTextHint">Send a message</string>
    <string name="ImageButton_contentDiscription">send</string>
    <string name="Toast_msg">Adapter</string>
</resources>
